# call-tracking-forwarder

./: README.md
.github/workflows/: build-dialer.yml
dialer/: README.md  index.html  package-lock.json  package.json  sample-calls.csv
dialer/src/: App.tsx  api.ts  csv.ts  settings.ts  softphone.ts  styles.css  types.ts
dialer/src-tauri/: Cargo.toml  tauri.conf.json
dialer/src-tauri/icons/: icon.icns
dialer/src-tauri/src/: main.rs
dialer/src/components/: CallerIdPanel.tsx  CsvImport.tsx  LeadFinder.tsx  QueueTable.tsx  SettingsPanel.tsx
forwarder/: .dev.vars.example  README.md  add-destination.ps1  package-lock.json  package.json  schema.sql  setup.ps1  wrangler.toml
forwarder/functions/api/: _middleware.js  destinations.js  dial.js  lead-search.js  queue.js  settings.js  twilio-numbers.js  voice-token.js
forwarder/functions/api/destinations/: [id].js
forwarder/functions/api/queue/: [id].js
forwarder/functions/voice/: bridge.js  client-outbound.js  dial-result.js  dial-status.js  inbound-result.js  inbound.js
forwarder/lib/: auth.js  db.js  jwt.js  leads.js  twilio.js
forwarder/public/: index.html
